--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "12.1.0",
     "next-pwa": "^5.4.4",
     "nextjs-progressbar": "^0.0.14",
+    "polished": "^4.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3",
