--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "polished": "^4.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.4.0",
     "styled-components": "^5.3.3",
-    "styled-media-query": "^2.1.2"
+    "styled-media-query": "^2.1.2",
+    "usehooks-ts": "^2.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
