feat(#1): Creating styles and basic functionality of Input component with label and icon

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -68,6 +68,7 @@
       "components": ["Link"],
       "specialLink": ["hrefLeft", "hrefRight"],
       "aspects": ["invalidHref", "preferButton"]
-    }]
+    }],
+    "no-use-before-define": ["error", { "variables": false }]
   }
 }
