--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@types/react-dom": "17.0.2"
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.2.0",
     "next": "12.1.0",
     "next-pwa": "^5.4.4",
     "nextjs-progressbar": "^0.0.14",
     "polished": "^4.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.32.1",
     "styled-components": "^5.3.3",
     "styled-icons": "^10.45.0",
     "styled-media-query": "^2.1.2",
