--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@testing-library/user-event": "^14.2.0",
+    "csstype": "^3.1.0",
     "next": "12.1.0",
     "next-pwa": "^5.4.4",
     "nextjs-progressbar": "^0.0.14",
