--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "jest",
     "test:watch": "yarn test --watch",
     "generate": "yarn plop --plopfile ./generators/plopfile.js",
-    "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook -s ./public"
+    "storybook": "cross-env NODE_OPTIONS=--openssl-legacy-provider start-storybook -s ./public -p 6006",
+    "build-storybook": "cross-env NODE_OPTIONS=--openssl-legacy-provider start-storybook build-storybook -s ./public"
   },
   "resolutions": {
     "@types/react": "17.0.2",
@@ -37,8 +37,8 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@next/eslint-plugin-next": "^12.0.7",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/react": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/react": "^6.5.16",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.4.0",
@@ -48,6 +48,7 @@
     "@typescript-eslint/parser": "^5.9.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-styled-components": "^2.0.2",
+    "cross-env": "^7.0.3",
     "eslint": "8.6.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.0.7",
@@ -55,7 +56,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-storybook": "^0.5.12",
+    "eslint-plugin-storybook": "^0.6.11",
     "husky": "^7.0.0",
     "jest": "^27.4.7",
     "jest-styled-components": "^7.0.8",
